feat(env): first

--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "asbuild:release": "asc aspect/index.ts --target release",
     "contract:bind": "node scripts/bind.cjs",
     "contract:deploy": "node scripts/contract-deploy.cjs",
-    "contract:build": "solc -o ./build/contract/ --via-ir --abi --storage-layout --bin ./contracts/*.sol --overwrite",
-    "build": "npm run contract:build && npm run aspect:gen && npm run aspect:build"
+    "contract:build": "solc -o ./build/contract/ --abi --storage-layout --bin ./contracts/*.sol --overwrite",
+    "build": "npm run contract:build && npm run aspect:gen && npm run aspect:build",
+    "test": "node tests",
+    "contract:unbind": "node scripts/unbind.cjs",
+    "operation:call": "node scripts/operation.cjs --isCall true",
+    "operation:send": "node scripts/operation.cjs --isCall false",
+    "bound:aspect": "node scripts/get-bound-aspect.cjs",
+    "bound:account": "node scripts/get-bound-account.cjs"
   },
   "keywords": [],
   "author": "",
